cmake_minimum_required (VERSION 3.1)
set(CMAKE_TOOLCHAIN_FILE /home/vcpkg/scripts/buildsystems/vcpkg.cmake)
project (sion)
set(CMAKE_BUILD_TYPE "Debug")
aux_source_directory(. DIR_SRCS)
find_package(OpenSSL REQUIRED)
add_executable(sion ${DIR_SRCS})
target_link_libraries(sion PRIVATE OpenSSL::SSL OpenSSL::Crypto)
#add_definitions(-DSION_DISABLE_SSL)
